--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@material-ui/icons": "^4.11.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^0.5.7",
+    "ng2-charts": "^2.4.2",
     "ngx-cookie-service": "^11.0.2",
     "ngx-translate-cache": "^9.0.2",
     "rxjs": "~6.6.0",
